# differential-runge-kotta-practice

./: README.md  main.py  pyproject.toml
scripts/: runge-kutta-test.py  test.py
